2.3.4 (14-11-2019)
2.3.3 (05-11-2019)
2.3.2 (31-10-2019)
- Improvement: added release notes file