@@ -1,3 +1,5 @@
+- Bug fix: Fixes locale change on uilayer screens
+
 2.3.4 (14-11-2019)
 2.3.3 (05-11-2019)
 2.3.2 (31-10-2019)
